# crewai-a2a-adapter

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_runner.py
examples/: advanced_integration.py  basic_usage.py  streaming_example.py
src/: __init__.py  a2a_core.py  crewai_adapter.py  streaming.py
tests/: conftest.py  test_a2a_core.py  test_crewai_adapter.py  test_integration.py  test_streaming.py
